[gd_scene load_steps=13 format=2]

[ext_resource path="res://Base_soldier.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/PlayerLogicControl.gd" type="Script" id=2]
[ext_resource path="res://SoldierMesh.tres" type="PrismMesh" id=3]
[ext_resource path="res://SoldierCollision.tres" type="Shape" id=4]
[ext_resource path="res://AnimationHandlerTeam.gd" type="Script" id=5]
[ext_resource path="res://PlayerSoldier.gd" type="Script" id=6]
[ext_resource path="res://DebugLabel.tscn" type="PackedScene" id=7]
[ext_resource path="res://FirePosition.gd" type="Script" id=8]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=1]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 0.9, 0.9, 0.9 ), Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "move_to"

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("Debug/Viewport")

[node name="Player" groups=[
"player",
] instance=ExtResource( 1 )]
collision_layer = 8
collision_mask = 23
script = ExtResource( 6 )

[node name="LogicControl" type="Spatial" parent="." index="0"]
transform = Transform( 1, 0, 7.44047e-22, 0, 1, 0, 7.44048e-22, 0, 1, 0, 0, 0 )
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="." index="1"]
transform = Transform( -1, -3.89414e-07, 1.70218e-14, 0, -4.37114e-08, -1, 3.89414e-07, -1, 4.37114e-08, 0, 0.5, 0 )
mesh = ExtResource( 3 )
skeleton = NodePath("")
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="." index="2"]
transform = Transform( -1, -3.25841e-07, 5.30863e-14, 0, -1.62921e-07, -1, 3.25841e-07, -1, 1.62921e-07, 0, 0.5, 0 )
shape = ExtResource( 4 )

[node name="FirePosition" parent="." index="3"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0.683332, -1.62288 )
script = ExtResource( 8 )
Bullet = ExtResource( 9 )

[node name="Timer" type="Timer" parent="FirePosition" index="0"]
autostart = true

[node name="Muzzle" parent="FirePosition" index="1"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -2.29826e-07, 0, -0.0447133 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
autoplay = "idle"
anims/attack = SubResource( 1 )
anims/idle = SubResource( 2 )
script = ExtResource( 5 )

[node name="Debug" parent="." index="5" instance=ExtResource( 7 )]
visible = false
texture = SubResource( 3 )

[node name="DistanceTimer" type="Timer" parent="." index="6"]
wait_time = 0.8
autostart = true
[connection signal="timeout" from="FirePosition/Timer" to="FirePosition" method="_on_Timer_timeout"]
[connection signal="timeout" from="DistanceTimer" to="." method="_on_DistanceTimer_timeout"]
